# Pixel-Scanner

./: .gitignore  .replit  PixScanner.py  README.md  Translator.js  anti-aliasing.py  main.py  pyproject.toml
