[tool.poetry]
name = "repl_python3_Pixel-Scanner"
version = "0.1.0"
description = ""
authors = ["BiFr0st <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
